--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Tanmay_Tripathi_dev" />
+    <meta name="twitter:image" content="/public/thumbnail-preview.png" />
   </head>
 
   <body>
