--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Musings by Tanmay Tripathi" />
     <meta property="og:description" content="Thoughtful articles and reflections on life, technology, and everything in between" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/thumbnail-preview.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Tanmay_Tripathi_dev" />
