--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:title" content="Musings by Tanmay Tripathi" />
     <meta property="og:description" content="Thoughtful articles and reflections on life, technology, and everything in between" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/thumbnail-preview.png" />
+    <meta property="og:image" content="/thumbnail-preview.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Tanmay_Tripathi_dev" />
-    <meta name="twitter:image" content="/public/thumbnail-preview.png" />
+    <meta name="twitter:image" content="/thumbnail-preview.png" />
   </head>
 
   <body>
