--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="/favicon.png" />
+    
     <meta property="og:title" content="Musings by Tanmay Tripathi" />
     <meta property="og:description" content="Thoughtful articles and reflections on life, technology, and everything in between" />
     <meta property="og:type" content="website" />
