--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Tanmay_Tripathi_dev" />
     <meta name="twitter:image" content="/thumbnail-preview.png" />
+    <meta name="google-site-verification" content="_bdlTvv8ZnZoiRHiZlr-EtO_2LT-BaPnRHimxbaU-bU" />
   </head>
 
   <body>
